--- a/.README.md.html
+++ b/.README.md.html
@@ -652,6 +652,7 @@ function setDocumentScrollTop(ypos)
  <li>Updated Spock for Groovy2</li> 
  <li>Updated Java to 7</li> 
  <li>Updated Gradle to 2.3</li> 
+ <li>Updated Codenarc to 0.22</li> 
  <li>Fixed issue #13, builder rowIndex counter is now reset on building a new sheet</li> 
 </ul> 
 <p>0.3.2a <em>THE_CURRENT_VERSION</em></p> 
